--- a/web/views/admin/nheader.html
+++ b/web/views/admin/nheader.html
@@ -7,30 +7,30 @@
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="{THEME_PATH}admin/css/index.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!--<link href="{THEME_PATH}admin/css/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />-->
+    <link href="{THEME_PATH}admin/css/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/css/table_form.css" rel="stylesheet"  />
-    <!--<link href="{THEME_PATH}admin/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />-->
+    <link href="{THEME_PATH}admin/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/global/plugins/bootstrap-tagsinput/bootstrap-tagsinput.css" rel="stylesheet" type="text/css" />
-    <!--<link href="{THEME_PATH}admin/global/plugins/bootstrap-colorpicker/css/colorpicker.css" rel="stylesheet" type="text/css" />-->
-    <!--<link href="{THEME_PATH}admin/global/plugins/jquery-minicolors/jquery.minicolors.css" rel="stylesheet" type="text/css" />-->
-    <!--<link href="{THEME_PATH}admin/global/plugins/jquery-notific8/jquery.notific8.min.css" rel="stylesheet" type="text/css" />-->
+    <link href="{THEME_PATH}admin/global/plugins/bootstrap-colorpicker/css/colorpicker.css" rel="stylesheet" type="text/css" />
+    <link href="{THEME_PATH}admin/global/plugins/jquery-minicolors/jquery.minicolors.css" rel="stylesheet" type="text/css" />
+    <link href="{THEME_PATH}admin/global/plugins/jquery-notific8/jquery.notific8.min.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="{THEME_PATH}admin/global/css/components-rounded.min.css" rel="stylesheet" id="style_components" type="text/css" />
     <link href="{THEME_PATH}admin/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <link href="{THEME_PATH}admin/my.css" rel="stylesheet" type="text/css" />
-    <!--<link href="{THEME_PATH}admin/css/font-awesome/css/font-awesome.css" rel="stylesheet" />-->
+    <link href="{THEME_PATH}admin/css/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
     <link href="{THEME_PATH}admin/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
-    <!--[if lt IE 9]>
+    <!-- [if lt IE 9]>
     <script src="{THEME_PATH}admin/global/plugins/respond.min.js"></script>
     <script src="{THEME_PATH}admin/global/plugins/excanvas.min.js"></script>
-    <![endif]-->
+    <![endif] -->
     <script type="text/javascript">var siteurl = "{SITE_PATH}{SELF}";var memberpath = "";var sys_theme = "{THEME_PATH}admin/";</script>
     <script type="text/javascript" src="{THEME_PATH}js/{SITE_LANGUAGE}.js"></script>
     <!-- BEGIN CORE PLUGINS -->
@@ -42,16 +42,16 @@
     <script src="{THEME_PATH}admin/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
     <script src="{THEME_PATH}admin/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
     <script src="{THEME_PATH}admin/global/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js" type="text/javascript"></script>
-    <!--<script src="{THEME_PATH}admin/global/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>-->
-    <!--<script src="{THEME_PATH}admin/global/plugins/jquery-minicolors/jquery.minicolors.min.js" type="text/javascript"></script>-->
+    <script src="{THEME_PATH}admin/global/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>
+    <script src="{THEME_PATH}admin/global/plugins/jquery-minicolors/jquery.minicolors.min.js" type="text/javascript"></script>
     <script src="{THEME_PATH}admin/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
-    <!--<script src="{THEME_PATH}admin/global/plugins/jquery-notific8/jquery.notific8.min.js" type="text/javascript"></script>-->
+    <script src="{THEME_PATH}admin/global/plugins/jquery-notific8/jquery.notific8.min.js" type="text/javascript"></script>
     <!-- END CORE PLUGINS -->
     <!-- BEGIN THEME GLOBAL SCRIPTS -->
     <script src="{THEME_PATH}admin/global/scripts/app.min.js" type="text/javascript"></script>
     <script src="{THEME_PATH}admin/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
     <script src="{THEME_PATH}admin/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
-    <!--<script src="{THEME_PATH}admin/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>-->
+    <script src="{THEME_PATH}admin/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="{THEME_PATH}js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{THEME_PATH}js/jquery.cookie.js"></script>
     <link rel="stylesheet" href="{THEME_PATH}js/ui-dialog.css">
@@ -89,7 +89,7 @@
             $(".table-list tr").last().addClass("dr_border_none");
             $("#pages a").first().addClass("noloading");
             $(".subnav .content-menu span").last().remove();
-            //art.dialog.close();
+            // art.dialog.close();
             $("input[name='dr_select']").click(function(){
                 $(".dr_select").prop("checked",$(this).prop("checked"));
             });
