--- a/models/Application/views/admin/application_index.html
+++ b/models/Application/views/admin/application_index.html
@@ -39,24 +39,24 @@
 
 		<thead>
 		<tr>
-			<th width="200" align="left">{L('名称')}</th>
-			<th width="200" align="left">{L('目录')}</th>
-			<th width="100" align="left">{L('版本')}</th>
-			<th width="200" align="left">{L('开发者')}</th>
-			<th width="100" align="center">{L('可用')}</th>
-			<th align="left" class="dr_option">{L('操作')}</th>
+			<th>{L('名称')}</th>
+			<th>{L('目录')}</th>
+			<th>{L('版本')}</th>
+			<th>{L('开发者')}</th>
+			<th>{L('可用')}</th>
+			<th class="dr_option">{L('操作')}</th>
 		</tr>
 		</thead>
 		<tbody>
 		{loop $list[1] $dir $t}
 		<tr>
-			<td align="left">{$t.name}</td>
-			<td align="left">{$dir}</td>
-            <td align="left">{$t.version}</td>
-			<td align="left">{$t.author}</a></td>
-			<td align="left">{if $this->ci->is_auth('application/config')}<a href="javascript:;" onClick="return dr_dialog_set('{php echo $t.disabled ? L('<font color=blue><b>你确定要启用它？启用后将正常使用</b></font>') : L('<font color=red><b>你确定要禁用它？禁用后将无法使用</b></font>');}','{dr_url('application/disabled',array('id'=>$t.id))}');"><img src="{THEME_PATH}admin/images/{php echo $t.disabled ? 0 : 1}.gif"></a>{else}<img src="{THEME_PATH}admin/images/{php echo $t.disabled ? 0 : 1}.gif"></a>{/if}</td>
+			<td>{$t.name}</td>
+			<td>{$dir}</td>
+            <td>{$t.version}</td>
+			<td>{$t.author}</td>
+			<td>{if $this->ci->is_auth('application/config')}<a href="javascript:;" onClick="return dr_dialog_set('{php echo $t.disabled ? L('<font color=blue><b>你确定要启用它？启用后将正常使用</b></font>') : L('<font color=red><b>你确定要禁用它？禁用后将无法使用</b></font>');}','{dr_url('application/disabled',array('id'=>$t.id))}');"><img src="{THEME_PATH}admin/images/{php echo $t.disabled ? 0 : 1}.gif"></a>{else}<img src="{THEME_PATH}admin/images/{php echo $t.disabled ? 0 : 1}.gif"></a>{/if}</td>
 
-			<td align="left" class="dr_option">
+			<td class="dr_option">
 			{if $this->ci->is_auth('application/config')}<a class="alist" href="{dr_url($dir.'/home/index')}"> <i class="fa fa-cog"></i> {L('配置')}</a>{/if}
             {if $this->ci->is_auth('application/uninstall')}<a class="adel" href="javascript:;" onClick="return dr_confirm_url('{L('您确定要这样操作吗？')}','{dr_url($dir.'/home/uninstall')}');"> <i class="fa fa-trash"></i> {L('卸载')}</a>{/if}
 
@@ -65,18 +65,18 @@
 		{/loop}
 		{loop $list[0] $dir $t}
 		<tr class="dr_none">
-			<td align="left">{$t.name}</td>
-			<td align="left">{$dir}</td>
-            <td align="left">{$t.version}</td>
-			<td align="left">{$t.author}</td>
-		    <td align="left">
+			<td>{$t.name}</td>
+			<td>{$dir}</td>
+            <td>{$t.version}</td>
+			<td>{$t.author}</td>
+		    <td>
 				{if $this->ci->is_auth('application/install')}
 				<a href="javascript:void(0);" onclick="dr_install('', '{dr_url($dir.'/home/install')}')" style="color:#00F">
 				{else}
 				<a href="javascript:;" style="color:#999">
 				{/if}{L('安装')}</a>
 			</td>
-			<td align="left" class="dr_option">
+			<td class="dr_option">
             {if $admin.adminid == 1}<a href="javascript:;" class="adel" onClick="return dr_confirm_url('<font color=red><b>{L('该操作将会从磁盘中彻底删除它且数据不可恢复，您确定吗？')}</b></font>','{dr_url('application/delete',array('dir'=>$dir))}');"> <i class="fa fa-close"></i> {L('删除')}</a>{/if}
 			</td>
 		</tr>
